kubedefs/appdeploy.yaml
# 指定 API 版本與資源類型
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp        # Deployment 的名稱
  labels:
    app: vproapp       # 標註此 Deployment 的 Label
spec:
  replicas: 1          # 定義 Pod 的副本數量為 1
  selector:
    matchLabels:
      app: vproapp     # Selector 用於尋找並管理帶有此 Label 的 Pod
  template:
    metadata:
      labels:
        app: vproapp   # 設定 Pod 的 Label，必須符合上面的 Selector
    spec:
      containers:
      - name: vproapp
        image: vprocontainers/vprofileapp # 應用程式的 Container Image
        imagePullPolicy: Always           # 每次部署時強制從 Registry 下載最新版本
        ports:
        - name: vproapp-port
          containerPort: 8080             # Container 內部監聽的 Port

      # Init Containers：在主 Container 啟動前的預檢查機制
