kubedefs/dbdeploy.yaml
# 指定 API Version 與 Resource Type
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb          # Deployment 的 Name
  labels:
    app: vprodb         # 用於識別此 Deployment 的 Label
spec:
  selector:
    matchLabels:
      app: vprodb       # 確保 Deployment 管理帶有此 Label 的 Pod
  replicas: 1           # 指定 Pod 的 Replica 數量為 1
  template:
    metadata:
      labels:
        app: vprodb     # 設定 Pod 的 Label，須與 Selector 匹配
    spec:
      containers:
      - name: vprodb
        image: vprocontainers/vprofiledb # 資料庫的 Container Image
        volumeMounts:
        - mountPath: /var/lib/mysql      # Container 內部的掛載路徑
          name: vpro-db-data             # 對應下方定義的 Volume Name
        ports:
        - name: vprodb-port
          containerPort: 3306            # MySQL 預設監聽的 Port
      volumes:
      - name: vpro-db-data
        persistentVolumeClaim:           # 使用 PVC 實作 Data Persistence
          claimName: db-pv-claim 

      # Init Container：在主容器啟動前執行
